[package]
name = "flip"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

description = "˙ʇxǝʇ ɹnoʎ sı os puɐ ˙uʍop ǝpısdn sı p|ɹoʍ ǝɥʇ sǝɯıʇǝɯos"

repository = "https://github.com/badboy/flip-rs"
homepage = "https://github.com/badboy/flip-rs"

license = "MIT"

build = "build.rs"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  "benches/**/*",
  "examples/**/*"
]

[dependencies]
phf = "0.7"

[build-dependencies]
phf_codegen = "0.7"
